tests/copies/newAndNeedChangeTests/pass/MinusAssign.java
package pass;

public class MinusAssign {
  public int minusassign(int number, int difference) {
    return number -= difference;
  }
}
