tests/copies/newAndNeedChangeTests/fail/MinusAssign.java
package fail;

import java.lang.System;

public class MinusAssign {

  public static void main(String[] args ) {
    45 -= "Hello";
  }

}
